# All changes to data.tree are documented here.

## Version 0.1.7 Chestnut

- Added conversion to and from list
- Added conversion from data.frame
- Added Node$Clone (returning a deep copy)
- Added Node$Prune (pruning the tree)
- Added Node$ToDataFrameTable (returning leafs only, with attributes inherited form ancestors)