@@ -8,9 +8,9 @@ S3method(as.dendrogram,Node)
 S3method(as.list,Node)
 S3method(print,Node)
 export(Aggregate)
+export(FormatFixedDecimal)
 export(FormatPercent)
 export(Node)
-export(PrintFixedDecimal)
 export(ToNewick)
 export(as.Node)
 export(as.phylo.Node)
